--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,12 +48,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        personal_token: ${{ secrets.PERSONAL_TOKEN }} # 另外还支持 deploy_token 和 github_token
-        external_repository: Eliauk365.github.io # 修改为你的 GitHub Pages 仓库
-        publish_dir: ./public
-        #keep_files: false
-        publish_branch: mian
-        # 如果使用自定义域名，还需要添加下面一行配置
-        cname: blog.kexsw.top
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.PERSONAL_TOKEN }} # 另外还支持 deploy_token 和 github_token
+          external_repository: Eliauk365.github.io # 修改为你的 GitHub Pages 仓库
+          publish_dir: ./public
+          #keep_files: false
+          publish_branch: mian
+          # 如果使用自定义域名，还需要添加下面一行配置
+          cname: blog.kexsw.top
