--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -27,7 +27,7 @@ defaults:
 
 jobs:
   # Build job
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -42,19 +42,13 @@ jobs:
           extended: true
       - name: Build with Hugo
         run: hugo
-
-  # Deployment job
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }} # 另外还支持 deploy_token 和 github_token
-          external_repository: Eliauk365.github.io # 修改为你的 GitHub Pages 仓库
+          external_repository: Eliauk365/Eliauk365.github.io # 修改为你的 GitHub Pages 仓库
           publish_dir: ./public
           #keep_files: false
           publish_branch: mian
           # 如果使用自定义域名，还需要添加下面一行配置
-          cname: blog.kexsw.top
+          cname: blog.kexsw.top   
