--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "http://example.org/"
+
+baseURL = "https://blog.kexsw.top/"
 # [en, zh-cn, fr, ...] 设置默认的语言
 defaultContentLanguage = "zh-cn"
 # 网站语言, 仅在这里 CN 大写
@@ -11,67 +12,34 @@ title = "冰桃美酒"
 # 更改使用 Hugo 构建网站时使用的默认主题
 theme = "DoIt"
 
-[menu]
-  [[menu.main]]
-    identifier = "posts"
-    # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
-    pre = ""
-    # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
-    post = ""
-    name = "文章"
-    url = "/posts/"
-    # 当你将鼠标悬停在此菜单链接上时, 将显示的标题
-    title = ""
-    weight = 1
-  [[menu.main]]
-    identifier = "tags"
-    pre = ""
-    post = ""
-    name = "标签"
-    url = "/tags/"
-    title = ""
-    weight = 2
-  [[menu.main]]
-    identifier = "categories"
-    pre = ""
-    post = ""
-    name = "分类"
-    url = "/categories/"
-    title = ""
-    weight = 3
-  [[menu.main]]
-    identifier = "about"
-    pre = ""
-    post = ""
-    name = "关于"
-    url = "/about/"
-    title = ""
-    weight = 4
-
 [params]
-  # DoIt 主题版本
+  #  DoIt 主题版本
   version = "0.2.X"
+  # 网站名称
+  title = "冰桃美酒"
   # 网站描述
-  description = "这是一个Blog"
+  description = "科技与很活"
   # 网站关键词
-  keywords = ["Theme", "Hugo", "Dolt", "Blog"]
-  # DoIt 更改 | 0.2.11 网站默认主题样式 ("light", "dark", "black", "auto")
-  defaultTheme = "dark"
+  keywords = ["Blog", "Hugo", "IT", "程序员"]
+  #  网站默认主题样式 ("light", "dark", "black", "auto")
+  defaultTheme = "auto"
   # 公共 git 仓库路径, 仅在 enableGitInfo 设为 true 时有效
   gitRepo = ""
-  # DoIt 新增 | 0.1.1 哪种哈希函数用来 SRI, 为空时表示不使用 SRI
+  #  哪种哈希函数用来 SRI, 为空时表示不使用 SRI
   # ("sha256", "sha384", "sha512", "md5")
-  fingerprint = ""
-  # DoIt 日期格式
+  fingerprint = "md5"
+  #  日期格式
   dateFormat = "2006-01-02"
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = ["/logo.png"]
-  # DoIt 开启PWA支持
-  enablePWA = false
-  # DoIt 应用图标配置
+  #  开启 PWA 支持
+  enablePWA = true
+  #  版权信息
+  license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+  #  应用图标配置
   [params.app]
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "DoIt"
+    title = "冰桃美酒"
     # 是否隐藏网站图标资源链接
     noFavicon = false
     # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
@@ -81,7 +49,7 @@ theme = "DoIt"
     # Windows v8-10磁贴颜色
     tileColor = "#da532c"
 
-  # DoIt 新增 | 0.2.0 搜索配置
+  #  搜索配置
   [params.search]
     enable = true
     # 搜索引擎的类型 ("lunr", "algolia", "fuse")
@@ -90,20 +58,20 @@ theme = "DoIt"
     contentLength = 4000
     # 搜索框的占位提示语
     placeholder = ""
-    # DoIt 新增 | 0.2.1 最大结果数目
+    #  最大结果数目
     maxResultLength = 10
-    # DoIt 新增 | 0.2.3 结果内容片段长度
+    #  结果内容片段长度
     snippetLength = 50
-    # DoIt 新增 | 0.2.1 搜索结果中高亮部分的 HTML 标签
+    #  搜索结果中高亮部分的 HTML 标签
     highlightTag = "em"
-    # DoIt 新增 | 0.2.4 是否在搜索索引中使用基于 baseURL 的绝对路径
+    #  是否在搜索索引中使用基于 baseURL 的绝对路径
     absoluteURL = false
     [params.search.algolia]
       index = ""
       appID = ""
       searchKey = ""
     [params.search.fuse]
-      # DoIt 新增 | 0.2.12 https://fusejs.io/api/options.html
+      #  https://fusejs.io/api/options.html
       isCaseSensitive = false
       minMatchCharLength = 2
       findAllMatches = false
@@ -120,10 +88,10 @@ theme = "DoIt"
     desktopMode = "fixed"
     # 移动端导航栏模式 ("fixed", "normal", "auto")
     mobileMode = "auto"
-    # DoIt 新增 | 0.2.11 主题切换模式
+    #  主题切换模式
     # 主题切换模式 ("switch", "select")
     themeChangeMode = "select"
-    # DoIt 新增 | 0.2.0 页面头部导航栏标题配置
+    #  页面头部导航栏标题配置
     [params.header.title]
       # LOGO 的 URL
       logo = ""
@@ -133,19 +101,22 @@ theme = "DoIt"
       pre = ""
       # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
       post = ""
-      # DoIt 新增 | 0.2.5 是否为标题显示打字机动画
+      #  是否为标题显示打字机动画
       typeit = false
 
   # 页面底部信息配置
   [params.footer]
     enable = true
-    # DoIt 新增 | 0.2.0 自定义内容 (支持 HTML 格式)
+    #  自定义内容 (支持 HTML 格式)
     custom = ''
-    # DoIt 新增 | 0.2.0 是否显示 Hugo 和主题信息
+    #  是否显示 Hugo 和主题信息
     hugo = true
-    # DoIt 新增 | 0.2.0 是否显示版权信息
+    #  托管服务信息 (支持 HTML 格式)
+    # <a title="Github Pages" href="https://docs.github.com/en/pages/" target="_blank" rel="noopener noreffer">GitHub Pages</a>
+    hostedOn = '' 
+    #  是否显示版权信息
     copyright = true
-    # DoIt 新增 | 0.2.0 是否显示作者
+    #  是否显示作者
     author = true
     # 网站创立年份
     since = 2021
@@ -154,7 +125,7 @@ theme = "DoIt"
     # 许可协议信息 (支持 HTML 格式)
     license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
 
-  # DoIt 新增 | 0.2.0 Section (所有文章) 页面配置
+  #  Section (所有文章) 页面配置
   [params.section]
     # section 页面每页显示文章数量
     paginate = 20
@@ -162,8 +133,14 @@ theme = "DoIt"
     dateFormat = "01-02"
     # RSS 文章数目
     rss = 10
+    #  最近更新文章设置
+    [params.section.recentlyUpdated]
+      enable = false
+      rss = false
+      days = 30
+      maxCount = 10
 
-  # DoIt 新增 | 0.2.0 List (目录或标签) 页面配置
+  #  List (目录或标签) 页面配置
   [params.list]
     # list 页面每页显示文章数量
     paginate = 20
@@ -172,83 +149,173 @@ theme = "DoIt"
     # RSS 文章数目
     rss = 10
 
-
   # 主页配置
   [params.home]
-    # DoIt 新增 | 0.2.0 RSS 文章数目
+    #  RSS 文章数目
     rss = 10
     # 主页个人信息
     [params.home.profile]
       enable = true
       # Gravatar 邮箱, 用于优先在主页显示的头像
-      gravatarEmail = "cunglahaubiennhu@gmail.com"
+      gravatarEmail = "jasminewilson9782@gmail.com"
       # 主页显示头像的 URL
       # 将你的头像文件放置于 static 或者 assets 目录下
       # 文件路径是相对于 static 或者 assets 目录的
       avatarURL = "/images/avatar.webp"
-      # DoIt 更改 | 0.2.7 主页显示的网站标题 (支持 HTML 格式)
+      #  主页显示的网站标题 (支持 HTML 格式)
       title = ""
       # 主页显示的网站副标题
-      subtitle = "吃嘛嘛香"
+      subtitle = "这是我的全新 Hugo 网站"
       # 是否为副标题显示打字机动画
       typeit = true
       # 是否显示社交账号
       social = true
-      # DoIt 新增 | 0.2.0 免责声明 (支持 HTML 格式)
+      #  免责声明 (支持 HTML 格式)
       disclaimer = ""
     # 主页文章列表
     [params.home.posts]
       enable = true
       # 主页每页显示文章数量
       paginate = 6
-      # DoIt 删除 | 0.2.0 被 params.page 中的 hiddenFromHomePage 替代
+      #  被 params.page 中的 hiddenFromHomePage 替代
       # 当你没有在文章前置参数中设置 "hiddenFromHomePage" 时的默认行为
       defaultHiddenFromHomePage = false
 
   # 作者的社交信息设置
   [params.social]
+    GitHub = "https://github.com/Eliauk365"
+    Linkedin = ""
     Twitter = "xxxx"
+    Instagram = "xxxx"
+    Facebook = "xxxx"
     Telegram = "xxxx"
-    Email = "cunglahaubiennhu@gmail.com"
-    RSS = true
+    Medium = ""
+    Gitlab = ""
+    Youtubelegacy = ""
+    Youtubecustom = ""
+    Youtubechannel = ""
+    Tumblr = ""
+    Quora = ""
+    Keybase = ""
+    Pinterest = ""
+    Reddit = ""
+    Codepen = ""
+    FreeCodeCamp = ""
+    Bitbucket = ""
+    Stackoverflow = ""
+    Weibo = ""
+    Odnoklassniki = ""
+    VK = ""
+    Flickr = ""
+    Xing = ""
+    Snapchat = ""
+    Soundcloud = ""
+    Spotify = ""
+    Bandcamp = ""
+    Paypal = ""
+    Fivehundredpx = ""
+    Mix = ""
+    Goodreads = ""
+    Lastfm = ""
+    Foursquare = ""
+    Hackernews = ""
+    Kickstarter = ""
+    Patreon = ""
+    Steam = ""
+    Twitch = ""
+    Strava = ""
+    Skype = ""
+    Whatsapp = ""
+    Zhihu = ""
+    Douban = ""
+    Angellist = ""
+    Slidershare = ""
+    Jsfiddle = ""
+    Deviantart = ""
+    Behance = ""
+    Dribbble = ""
+    Wordpress = ""
+    Vine = ""
+    Googlescholar = ""
+    Researchgate = ""
+    Mastodon = ""
+    Thingiverse = ""
+    Devto = ""
+    Gitea = ""
+    XMPP = ""
+    Matrix = ""
+    Bilibili = ""
+    ORCID = ""
+    Liberapay = ""
+    Ko-Fi = ""
+    BuyMeACoffee = ""
+    Linktree = ""
+    QQ = ""
+    QQGroup = ""
+    Email = "jasminewilson9782@gmail.com"
+    RSS = true # 
 
-  # DoIt 更改 | 0.2.0 文章页面配置
+  #  文章页面配置
   [params.page]
-    # DoIt 新增 | 0.2.0 是否在主页隐藏一篇文章
+    #  是否在主页隐藏一篇文章
     hiddenFromHomePage = false
-    # DoIt 新增 | 0.2.0 是否在搜索结果中隐藏一篇文章
+    #  是否在搜索结果中隐藏一篇文章
     hiddenFromSearch = false
-    # DoIt 新增 | 0.2.0 是否使用 twemoji
+    #  是否使用 twemoji
     twemoji = false
     # 是否使用 lightgallery
     lightgallery = false
-    # DoIt 新增 | 0.2.0 是否使用 ruby 扩展语法
+    #  是否使用 ruby 扩展语法
     ruby = true
-    # DoIt 新增 | 0.2.0 是否使用 fraction 扩展语法
+    #  是否使用 fraction 扩展语法
     fraction = true
-    # DoIt 新增 | 0.2.0 是否使用 fontawesome 扩展语法
+    #  是否使用 fontawesome 扩展语法
     fontawesome = true
     # 是否在文章页面显示原始 Markdown 文档链接
     linkToMarkdown = true
-    # DoIt 新增 | 0.2.4 是否在 RSS 中显示全文内容
+    #  配置文章原始文件的链接
+    linkToSource = false
+    # "https://github.com/user/repo/blob/main/{path}"
+    #  配置编辑文章的链接
+    linkToEdit = false
+    # "https://github.com/user/repo/edit/main/{path}"
+    # "https://gitlab.com/user/repo/-/edit/main/{path}"
+    # "https://bitbucket.org/user/repo/src/main/{path}?mode=edit"
+    #  配置提交错误的链接
+    linkToReport = false
+    # "https://github.com/user/repo/issues/new?title=[bug]%20{title}&body=|Field|Value|%0A|-|-|%0A|Title|{title}|%0A|Url|{url}|%0A|Filename|https://github.com/user/repo/blob/main/{path}|"
+    #  是否在 RSS 中显示全文内容
     rssFullText = false
-    # DoIt 新增 | 0.2.11 页面样式 ("normal", "wide")
+    #  页面样式 ("normal", "wide")
     pageStyle = "normal"
-    # DoIt 新增 | 0.2.0 目录配置
+    #  是否在文章开头显示系列导航
+    seriesNavigation = true
+    #  过时文章提示
+    [params.page.outdatedArticleReminder]
+      enable = true
+      # 如果文章最后更新于 90 天之前，显示提醒
+      reminder = 90
+      # 如果文章最后更新于 180 天之前，显示警告
+      warning = 180
+    #  目录配置
     [params.page.toc]
       # 是否使用目录
       enable = true
-      # DoIt 新增 | 0.2.9 是否保持使用文章前面的静态目录
+      #  是否保持使用文章前面的静态目录
       keepStatic = true
       # 是否使侧边目录自动折叠展开
       auto = true
-    # DoIt 新增 | 0.2.0 代码配置
+    #  代码配置
     [params.page.code]
       # 是否显示代码块的复制按钮
       copy = true
       # 默认展开显示的代码行数
       maxShownLines = 10
-    # DoIt 更改 | 0.2.0 KaTeX 数学公式
+    #  表格配置
+    [params.page.table]
+      # 是否开启表格排序
+      sort = true
+    #  KaTeX 数学公式
     [params.page.math]
       enable = true
       # 默认块定界符是 $$ ... $$ 和 \\[ ... \\]
@@ -261,7 +328,7 @@ theme = "DoIt"
       copyTex = true
       # KaTeX 插件 mhchem
       mhchem = true
-    # DoIt 新增 | 0.2.0 Mapbox GL JS 配置
+    #  Mapbox GL JS 配置
     [params.page.mapbox]
       # Mapbox GL JS 的 access token
       accessToken = ""
@@ -277,21 +344,48 @@ theme = "DoIt"
       scale = true
       # 是否添加 FullscreenControl
       fullscreen = true
-    # DoIt 更改 | 0.2.0 文章页面的分享信息设置
+    #  文章页面的分享信息设置
     [params.page.share]
-    enable = true
-    # DoIt 更改 | 0.2.0 评论系统设置
+      enable = true
+      Twitter = true
+      Facebook = true
+      Linkedin = false
+      Whatsapp = true
+      Pinterest = false
+      Tumblr = false
+      HackerNews = false
+      Reddit = false
+      VK = false
+      Buffer = false
+      Xing = false
+      Line = true
+      Instapaper = false
+      Pocket = false
+      Digg = false
+      Stumbleupon = false
+      Flipboard = false
+      Weibo = true
+      Renren = false
+      Myspace = true
+      Blogger = true
+      Baidu = false
+      Odnoklassniki = false
+      Evernote = true
+      Skype = false
+      Trello = false
+      Mix = false
+    #  评论系统设置
     [params.page.comment]
       enable = true
       # Disqus 评论系统设置
       [params.page.comment.disqus]
-        # DoIt 新增 | 0.1.1
-        enable = false
+        # 
+        enable = true
         # Disqus 的 shortname, 用来在文章中启用 Disqus 评论系统
-        shortname = ""
+        shortname = "kexswtop"
       # Gitalk 评论系统设置
       [params.page.comment.gitalk]
-        # DoIt 新增 | 0.1.1
+        # 
         enable = false
         owner = ""
         repo = ""
@@ -312,7 +406,7 @@ theme = "DoIt"
         highlight = true
         enableQQ = false
         serverURLs = ""
-        # DoIt 新增 | 0.2.6 emoji 数据文件名称, 默认是 "google.yml"
+        #  emoji 数据文件名称, 默认是 "google.yml"
         # ("apple.yml", "google.yml", "facebook.yml", "twitter.yml")
         # 位于 "themes/DoIt/assets/data/emoji/" 目录
         # 可以在你的项目下相同路径存放你自己的数据文件:
@@ -320,23 +414,20 @@ theme = "DoIt"
         emoji = ""
       # Waline 评论系统设置
       [params.page.comment.waline]
-        # DoIt 新增 | 0.2.11
+        # 
         enable = false
         serverURL = ""
-        placeholder = "Just Go Go."
-        wordLimit = 0
-        avatar = "mp"
-        meta = ["nick", "mail", "link"]
-        pageSize = 10
-        lang = "en"
-        visitor = true
-        highlight = true
-        avatarCDN = ""
-        avatarForce = false
-        emojiCDN = ""
-        emojiMaps = ""
-        requiredFields = []
-        anonymous = false
+        pageview = true
+        comment = true
+        # emoji = ['https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo']
+        # meta = ['nick', 'mail', 'link']
+        # requiredMeta = []
+        # login = 'enable'
+        # wordLimit = 0
+        # pageSize = 10
+        # imageUploader = false
+        # highlighter = false
+        # texRenderer = false
       # Facebook 评论系统设置
       [params.page.comment.facebook]
         enable = false
@@ -344,7 +435,7 @@ theme = "DoIt"
         numPosts = 10
         appId = ""
         languageCode = "zh_CN"
-      # DoIt 新增 | 0.2.0 Telegram Comments 评论系统设置
+      #  Telegram Comments 评论系统设置
       [params.page.comment.telegram]
         enable = false
         siteID = ""
@@ -354,10 +445,11 @@ theme = "DoIt"
         colorful = true
         dislikes = false
         outlined = false
-      # DoIt 新增 | 0.2.0 Commento 评论系统设置
+        dark = false
+      #  Commento 评论系统设置
       [params.page.comment.commento]
         enable = false
-      # DoIt 新增 | 0.2.5 Utterances 评论系统设置
+      #  Utterances 评论系统设置
       [params.page.comment.utterances]
         enable = false
         # owner/repo
@@ -366,14 +458,15 @@ theme = "DoIt"
         label = ""
         lightTheme = "github-light"
         darkTheme = "github-dark"
-      # DoIt 新增 | 0.2.12 Twikoo 评论系统设置
+      #  Twikoo 评论系统设置
       [params.page.comment.twikoo]
         enable = false
         envId = ""
         region = ""
         path = ""
         visitor = true
-      # DoIt 新增 | 0.2.12 Vssue 评论系统设置
+        commentCount = true
+      #  Vssue 评论系统设置
       [params.page.comment.vssue]
         enable = false
         platform = "" # ("bitbucket", "gitea", "gitee", "github", "gitlab")
@@ -381,19 +474,53 @@ theme = "DoIt"
         repo = ""
         clientId = ""
         clientSecret = ""
-    # DoIt 新增 | 0.2.7 第三方库配置
+      #  Remark42 评论系统设置
+      [params.page.comment.remark42]
+        enable = false
+        host = ""
+        site_id = ""
+        max_shown_comments = 15
+        show_email_subscription = true
+        simple_view = false
+      #  giscus 评论系统设置
+      [params.page.comment.giscus]
+        enable = false
+        # owner/repo
+        dataRepo = ""
+        dataRepoId = ""
+        dataCategory = ""
+        dataCategoryId = ""
+        dataMapping = "pathname"
+        dataReactionsEnabled = "1"
+        dataEmitMetadata = "0"
+        dataInputPosition = "bottom"
+        lightTheme = "light"
+        darkTheme = "dark"
+        dataLang = "zh-CN"
+    #  第三方库配置
     [params.page.library]
       [params.page.library.css]
         # someCSS = "some.css"
+        #  更多第三方库配置
+        # [params.page.library.css.someOtherCSS]
+        #   src = "someOther.css"
+        #   defer = true
+        #   attr = "customAttribute"
         # 位于 "assets/"
         # 或者
         # someCSS = "https://cdn.example.com/some.css"
       [params.page.library.js]
-        # someJavascript = "some.js"
+        # someJavaScript = "some.js"
+        #  更多第三方库配置
+        # [params.page.library.js.someOtherJavaScript]
+        #   src = "someOther.js"
+        #   defer = false
+        #   async = true
+        #   attr = "customAttribute"
         # 位于 "assets/"
         # 或者
-        # someJavascript = "https://cdn.example.com/some.js"
-    # DoIt 更改 | 0.2.10 页面 SEO 配置
+        # someJavaScript = "https://cdn.example.com/some.js"
+    #  页面 SEO 配置
     [params.page.seo]
       # 图片 URL
       images = []
@@ -401,8 +528,20 @@ theme = "DoIt"
       [params.page.seo.publisher]
         name = ""
         logoUrl = ""
+    #  相关文章推荐配置
+    [params.page.related]
+      enable = true
+      count = 5
 
-  # DoIt 新增 | 0.2.5 TypeIt 配置
+
+  #  赞赏配置
+  [params.sponsor]
+    enable = false
+    bio = "如果你觉得这篇文章对你有所帮助，欢迎赞赏~"
+    link = "https://www.buymeacoffee.com" # 你的赞赏页面的地址
+    custom = "" # 自定义 HTML 
+
+  #  TypeIt 配置
   [params.typeit]
     # 每一步的打字速度 (单位是毫秒)
     speed = 100
@@ -420,15 +559,17 @@ theme = "DoIt"
     yandex = ""
     pinterest = ""
     baidu = ""
+    so = "" # 360 search
+    sogou = ""
 
-  # DoIt 新增 | 0.2.10 网站 SEO 配置
+  #  网站 SEO 配置
   [params.seo]
     # 图片 URL
     image = ""
     # 缩略图 URL
     thumbnailUrl = ""
 
-  # DoIt 新增 | 0.2.0 网站分析配置
+  #  网站分析配置
   [params.analytics]
     enable = false
     # Google Analytics
@@ -441,17 +582,32 @@ theme = "DoIt"
       id = ""
       # 自行托管追踪器时的主机路径
       server = ""
+    #  Baidu Analytics
+    [params.analytics.baidu]
+      id = ""
+    #  Umami Analytics
+    [params.analytics.umami]
+      data_website_id = ""
+      src = ""
+      data_domains = ""
+    #  Plausible Analytics
+    [params.analytics.plausible]
+      data_domain = ""
+      src = ""
+    #  Cloudflare Analytics
+    [params.analytics.cloudflare]
+      token = ""
 
-  # DoIt 新增 | 0.2.7 Cookie 许可配置
+  #  Cookie 许可配置
   [params.cookieconsent]
-    enable = false
+    enable = true
     # 用于 Cookie 许可横幅的文本字符串
     [params.cookieconsent.content]
       message = ""
       dismiss = ""
       link = ""
 
-  # DoIt 更改 | 0.2.7 第三方库文件的 CDN 设置
+  #  第三方库文件的 CDN 设置
   [params.cdn]
     # CDN 数据文件名称, 默认不启用
     # ("jsdelivr.yml")
@@ -460,24 +616,53 @@ theme = "DoIt"
     # "assets/data/cdn/"
     data = ""
 
-  # DoIt 新增 | 0.2.8 兼容性设置
+  #  兼容性设置
   [params.compatibility]
     # 是否使用 Polyfill.io 来兼容旧式浏览器
     polyfill = false
     # 是否使用 object-fit-images 来兼容旧式浏览器
     objectFit = false
-
+# hugo 菜单设置
+[menu]
+  [[menu.main]]
+    identifier = "posts"
+    # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
+    pre = ""
+    # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
+    post = ""
+    name = "全部文章"
+    url = "/posts/"
+    # 当你将鼠标悬停在此菜单链接上时, 将显示的标题
+    title = ""
+    weight = 1
+  [[menu.main]]
+    identifier = "tags"
+    pre = ""
+    post = ""
+    name = "标签"
+    url = "/tags/"
+    title = ""
+    weight = 2
+  [[menu.main]]
+    identifier = "categories"
+    pre = ""
+    post = ""
+    name = "分类"
+    url = "/categories/"
+    title = ""
+    weight = 3
 
 # Hugo 解析文档的配置
 [markup]
-  # 语法高亮设置 (https://gohugo.io/content-management/syntax-highlighting)
+  # 语法高亮设置
   [markup.highlight]
-    # false 是必要的设置 (https://github.com/dillonzq/LoveIt/issues/158)
-    noClasses = false
     codeFences = true
     guessSyntax = true
     lineNos = true
     lineNumbersInTable = true
+    # false 是必要的设置
+    # (https://github.com/dillonzq/LoveIt/issues/158)
+    noClasses = false
   # Goldmark 是 Hugo 0.60 以来的默认 Markdown 解析库
   [markup.goldmark]
     [markup.goldmark.extensions]
@@ -498,9 +683,11 @@ theme = "DoIt"
 
 # 作者配置
 [author]
-  name = "酒醉"
-  email = "cunglahaubiennhu@gmail.com"
+  name = "冰桃"
+  email = "jasminewilson9782@gmail.com"
   link = ""
+  avatar = ""
+  gravatarEmail = "jasminewilson9782@gmail.com"
 
 # 网站地图配置
 [sitemap]
@@ -515,7 +702,7 @@ theme = "DoIt"
 
 # 隐私信息配置
 [privacy]
-  # DoIt 删除 | 0.2.0 Google Analytics 相关隐私 (被 params.analytics.google 替代)
+  #  Google Analytics 相关隐私 (被 params.analytics.google 替代)
   [privacy.googleAnalytics]
     # ...
   [privacy.twitter]
@@ -536,7 +723,7 @@ theme = "DoIt"
 
 # 用于 Hugo 输出文档的设置
 [outputs]
-  # DoIt 更改 | 0.2.0
+  # 
   home = ["HTML", "RSS", "JSON"]
   page = ["HTML", "MarkDown"]
   section = ["HTML", "RSS"]
