--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,23 @@
 {
     "conventionalCommits.scopes": [
         "Blog"
+    ],
+    "MicroPython.executeButton": [
+        {
+            "text": "▶",
+            "tooltip": "运行",
+            "alignment": "left",
+            "command": "extension.executeFile",
+            "priority": 3.5
+        }
+    ],
+    "MicroPython.syncButton": [
+        {
+            "text": "$(sync)",
+            "tooltip": "同步",
+            "alignment": "left",
+            "command": "extension.execute",
+            "priority": 4
+        }
     ]
 }
