--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,21 +31,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
           extended: true
       - name: Build with Hugo
         run: hugo
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          personal_token: ${{ secrets.PERSONAL_TOKEN }} # 另外还支持 deploy_token 和 github_token
+          personal_token: ${{ secrets.GITHUB_TOKEN }} # 另外还支持 deploy_token 和 github_token
           external_repository: Eliauk365/Eliauk365.github.io # 修改为你的 GitHub Pages 仓库
           publish_dir: ./public
           #keep_files: false
