--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,54 +1,37 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+name: GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-# Default to bash
-defaults:
-  run:
-    shell: bash
+    branches:
+      - main  # Set a branch to deploy
+  pull_request:
 
 jobs:
-  # Build job
-  build-deploy:
+  deploy:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
           extended: true
-      - name: Build with Hugo
-        run: hugo
+
+      - name: Build
+        run: hugo --minify
+
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/main'
         with:
-          personal_token: ${{ secrets.PERSONAL_TOKEN }} # 另外还支持 deploy_token 和 github_token
-          external_repository: Eliauk365/Eliauk365.github.io # 修改为你的 GitHub Pages 仓库
+          personal_token: ${{ secrets.PERSONAL_TOKEN }}
           publish_dir: ./public
-          #keep_files: false
           publish_branch: main
-          # 如果使用自定义域名，还需要添加下面一行配置
-          cname: blog.kexsw.top   
+          external_repository: Eliauk365/Eliauk365.github.io
+          
