--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ theme = "DoIt"
 
 [params]
   #  DoIt 主题版本
-  version = "0.4.0"
+  version = "0.4.2"
   # 网站名称
   title = "逍遥居"
   # 网站描述
@@ -34,8 +34,23 @@ theme = "DoIt"
   images = ["/logo.png"]
   #  开启 PWA 支持
   enablePWA = true
+  # [试验性功能] 缓存markdown中的图片链接到本地，详情请见：https://github.com/HEIGE-PCloud/DoIt/pull/860#issue-1574342372
+  cacheRemoteImages = true
+  # [试验性功能] 使用 hugo 自带的图片处理功能生成 srcset 属性
+optimizeImages = true
+  # [实验性功能] optimizeImages 中 srcset 属性的缩放方法, 详情请见：https://gohugo.io/content-management/image-processing/#image-processing-options
+  srcsetSmallResizeMethod = "700x webp Lanczos q75"
+  srcsetDefaultResizeMethod = "1200x webp Lanczos q75"
+  srcsetLargeResizeMethod = "2000x webp Lanczos q75"
   #  版权信息
-  license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+  license = '<a rel="license external nofollow noopener noreferrer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+  # 作者配置
+  [params.author]
+    name = "逍遥客"
+    email = "jasminewilson9782@gmail.com"
+    link = ""
+    avatar = ""
+    gravatarEmail = "cunglahaubiennhu@gmail.com"
   #  应用图标配置
   [params.app]
     # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
@@ -52,7 +67,7 @@ theme = "DoIt"
   #  搜索配置
   [params.search]
     enable = true
-    # 搜索引擎的类型 ("lunr", "algolia", "fuse")
+    # 搜索引擎的类型 ("algolia", "fuse")
     type = "fuse"
     # 文章内容最长索引长度
     contentLength = 4000
@@ -82,12 +97,13 @@ theme = "DoIt"
       useExtendedSearch = false
       ignoreFieldNorm = false
 
+  [params.image]
+    # 缓存图片链接到本地
+    cacheRemote = true
+    # 图片缩放和优化
+    optimise = true
   # 页面头部导航栏配置
   [params.header]
-    # 桌面端导航栏模式 ("fixed", "normal", "auto")
-    desktopMode = "fixed"
-    # 移动端导航栏模式 ("fixed", "normal", "auto")
-    mobileMode = "auto"
     #  主题切换模式
     # 主题切换模式 ("switch", "select")
     themeChangeMode = "select"
@@ -112,18 +128,18 @@ theme = "DoIt"
     #  是否显示 Hugo 和主题信息
     hugo = true
     #  托管服务信息 (支持 HTML 格式)
-    # <a title="Github Pages" href="https://docs.github.com/en/pages/" target="_blank" rel="noopener noreffer">GitHub Pages</a>
-    hostedOn = '' 
+    # <a title="Github Pages" href="https://docs.github.com/en/pages/" target="_blank" rel="noopener noreferrer">GitHub Pages</a>
+    hostedOn = ''
     #  是否显示版权信息
     copyright = true
     #  是否显示作者
     author = true
     # 网站创立年份
-    since = 2021
+    since = 2019
     # ICP 备案信息, 仅在中国使用 (支持 HTML 格式)
     icp = ""
     # 许可协议信息 (支持 HTML 格式)
-    license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+    license = '<a rel="license external nofollow noopener noreferrer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
 
   #  Section (所有文章) 页面配置
   [params.section]
@@ -157,11 +173,13 @@ theme = "DoIt"
     [params.home.profile]
       enable = true
       # Gravatar 邮箱, 用于优先在主页显示的头像
-      gravatarEmail = "jasminewilson9782@gmail.com"
+      gravatarEmail = "cunglahaubiennhu@gmail.com"
       # 主页显示头像的 URL
       # 将你的头像文件放置于 static 或者 assets 目录下
       # 文件路径是相对于 static 或者 assets 目录的
       avatarURL = "/images/avatar.webp"
+      # 头像的链接指向的 URL
+      avatarLinkURL = ""
       #  主页显示的网站标题 (支持 HTML 格式)
       title = ""
       # 主页显示的网站副标题
@@ -284,17 +302,21 @@ theme = "DoIt"
     # "https://github.com/user/repo/issues/new?title=[bug]%20{title}&body=|Field|Value|%0A|-|-|%0A|Title|{title}|%0A|Url|{url}|%0A|Filename|https://github.com/user/repo/blob/main/{path}|"
     #  是否在 RSS 中显示全文内容
     rssFullText = false
-    #  页面样式 ("normal", "wide")
-    pageStyle = "normal"
     #  是否在文章开头显示系列导航
     seriesNavigation = true
+    # 是否启用最后修改时间
+    enableLastMod = true
+    # 是否启用字数统计
+    enableWordCount = true
+    # 是否启用阅读时间估计
+    enableReadingTime = true
     #  过时文章提示
     [params.page.outdatedArticleReminder]
       enable = true
-      # 如果文章最后更新于 180 天之前，显示提醒
-      reminder = 180
-      # 如果文章最后更新于 360 天之前，显示警告
-      warning = 360
+      # 如果文章最后更新于 90 天之前，显示提醒
+      reminder = 90
+      # 如果文章最后更新于 180 天之前，显示警告
+      warning = 180
     #  目录配置
     [params.page.toc]
       # 是否使用目录
@@ -305,10 +327,14 @@ theme = "DoIt"
       auto = true
     #  代码配置
     [params.page.code]
-      # 是否显示代码块的复制按钮
-      copy = true
       # 默认展开显示的代码行数
       maxShownLines = 10
+      # 是否显示代码行号
+      lineNos = true
+      # 是否开启代码换行
+      wrap = false
+      # 是否显示代码块标题
+      header = true
     #  表格配置
     [params.page.table]
       # 是否开启表格排序
@@ -326,6 +352,8 @@ theme = "DoIt"
       copyTex = true
       # KaTeX 插件 mhchem
       mhchem = true
+      # 使用 MathJax 替代 KaTeX
+      mathjax = false
     #  Mapbox GL JS 配置
     [params.page.mapbox]
       # Mapbox GL JS 的 access token
@@ -372,6 +400,15 @@ theme = "DoIt"
       Skype = false
       Trello = false
       Mix = false
+      Mastodon = false
+    # PlantUML 在线渲染服务器
+    [params.page.plantuml]
+      server = "https://www.plantuml.com/plantuml"
+
+    # instant.page 设置
+    [params.page.instantpage]
+      enable = false
+
     #  评论系统设置
     [params.page.comment]
       enable = true
@@ -462,6 +499,7 @@ theme = "DoIt"
         envId = ""
         region = ""
         path = ""
+        cloudbase = true # boolean : true / false. # 是否部署在腾讯云 CloudBase
         visitor = true
         commentCount = true
       #  Vssue 评论系统设置
@@ -495,6 +533,17 @@ theme = "DoIt"
         lightTheme = "light"
         darkTheme = "dark"
         dataLang = "zh-CN"
+        dataLoading = "lazy"
+      # artalk 评论系统设置
+      [params.page.comment.artalk]
+        enable = false
+        server = ""
+        site = ""
+        lite = false
+        katex = false
+        lightbox = false
+        pageview = true
+        commentCount = true
     #  第三方库配置
     [params.page.library]
       [params.page.library.css]
@@ -537,7 +586,7 @@ theme = "DoIt"
     enable = false
     bio = "如果你觉得这篇文章对你有所帮助，欢迎赞赏~"
     link = "https://www.buymeacoffee.com" # 你的赞赏页面的地址
-    custom = "" # 自定义 HTML 
+    custom = "" # 自定义 HTML
 
   #  TypeIt 配置
   [params.typeit]
@@ -566,6 +615,9 @@ theme = "DoIt"
     image = ""
     # 缩略图 URL
     thumbnailUrl = ""
+    # 
+    # Google 搜索结果中网站备用名字
+    alternateName = ["Hugo DoIt"]
 
   #  网站分析配置
   [params.analytics]
@@ -587,6 +639,7 @@ theme = "DoIt"
     [params.analytics.umami]
       data_website_id = ""
       src = ""
+      data_host_url = ""
       data_domains = ""
     #  Plausible Analytics
     [params.analytics.plausible]
@@ -618,8 +671,6 @@ theme = "DoIt"
   [params.compatibility]
     # 是否使用 Polyfill.io 来兼容旧式浏览器
     polyfill = false
-    # 是否使用 object-fit-images 来兼容旧式浏览器
-    objectFit = false
 # hugo 菜单设置
 [menu]
   [[menu.main]]
@@ -687,14 +738,6 @@ theme = "DoIt"
     startLevel = 2
     endLevel = 6
 
-# 作者配置
-[author]
-  name = "逍遥客"
-  email = "jasminewilson9782@gmail.com"
-  link = ""
-  avatar = ""
-  gravatarEmail = "cunglahaubiennhu@gmail.com"
-
 # 网站地图配置
 [sitemap]
   changefreq = "weekly"
@@ -703,15 +746,15 @@ theme = "DoIt"
 
 # Permalinks 配置
 [Permalinks]
-  # posts = ":year/:month/:filename"
-  posts = ":filename"
+  # posts = ":year/:month/:contentbasename"
+  posts = ":contentbasename"
 
 # 隐私信息配置
 [privacy]
   #  Google Analytics 相关隐私 (被 params.analytics.google 替代)
   [privacy.googleAnalytics]
     # ...
-  [privacy.twitter]
+  [privacy.x]
     enableDNT = true
   [privacy.youtube]
     privacyEnhanced = true
