--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -32,3 +32,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+          external_repository: Eliauk365/Eliauk365.github.io
