--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,6 +30,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./public
           external_repository: Eliauk365/Eliauk365.github.io
