fix action config

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
@@ -30,7 +30,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          deploy_key: ${{ secrets.PERSONAL_TOKEN }}
           publish_dir: ./public
           publish_branch: main
           external_repository: Eliauk365/Eliauk365.github.io
